--- a/css/bootstrap-back.css
+++ b/css/bootstrap-back.css
@@ -3462,7 +3462,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: #333;
+  background-color: #5a5a5a;
 }
 .nav > li.disabled > a {
   color: #404040;
@@ -3477,7 +3477,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a,
 .nav .open > a:hover,
 .nav .open > a:focus {
-  background-color: #333;
+  background-color: #5a5a5a;
   border-color: #d3222a;
 }
 .nav .nav-divider {
@@ -3643,7 +3643,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-bottom: 18px;
   border: 1px solid transparent;
   font-size: 12px;
-  width:80%;
 }
 @media (min-width: 768px) {
   .navbar {
@@ -3728,7 +3727,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-fixed-top {
-  top: 90%;
+  top: 0;
   border-width: 0 0 1px;
 }
 .navbar-fixed-bottom {
@@ -5794,7 +5793,7 @@ button.close {
   font-weight: 300;
 }
 .btn-default:hover {
-  background-color: #333;
+  background-color: #5a5a5a;
 }
 .btn-sm,
 .btn-xs {
@@ -5835,7 +5834,6 @@ body {
   font-weight: 300;
 }
 
-}
 .dropdown-header {
   font-size: 12px;
 }
@@ -5933,7 +5931,7 @@ label,
   border: none;
 }
 .panel-default > .panel-heading {
-  background-color: #333;
+  background-color: #5a5a5a;
   color: #ebebeb;
 }
 .thumbnail {
@@ -5945,7 +5943,7 @@ label,
 }
 .modal-header,
 .modal-footer {
-  background-color: #333;
+  background-color: #5a5a5a;
   border: none;
   border-radius: 0;
 }
