--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,9 +14,13 @@
 
       <div class="footer-col footer-col-2">
         <ul class="social-media-list">
+
+          
           {% if site.github_username %}
           <li>
-            {% include icon-github.html username=site.github_username %}
+            <a href="https://github.com/{{ site.github_username }}">
+            <span class="icon"><i class="fa fa-github"></i></span>
+            <span class="username">{{ site.github_username }}</span></a>
           </li>
           {% endif %}
 
@@ -25,6 +29,17 @@
             {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
+
+
+          {% if site.linkedin_username %}
+          <li>
+            <a href="https://linkedin.com/in/{{ site.linkedin_username }}">
+            <span class="icon"><i class="fa fa-linkedin"></i></span>
+            <span class="username">{{ site.linkedin_username }}</span></a>
+          </li>
+          {% endif %}
+
+
         </ul>
       </div>
 
