--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -192,7 +192,8 @@ pre {
  * Icons
  */
 .icon {
-
+    color: $grey-color;
+    text-decoration: none;
     > svg {
         display: inline-block;
         width: 16px;
